    This may cause a tiny incompatibility: if you redefine
    Enumerable#max and call max to an Array, your redefinition will be
    now ignored.  You should also redefine Array#max.

  * Array#sum  [Feature #12217]
    This is different from Enumerable#sum in that Array#sum doesn't depend on
    the definition of each method.

  * Array#concat [Feature #12333]
    Now takes multiple arguments.

* Comparable

  * Comparable#clamp.  [Feature #10594]

* Dir

  * Dir.empty?.  [Feature #10121]

* Enumerable

  * Enumerable#sum  [Feature #12217]
  * Enumerable#uniq  [Feature #11090]
  * Enumerable#chunk called without a block now return an Enumerator
    [Feature #2172]

* Enumerator::Lazy

  * Enumerator::Lazy#chunk_while  [GH-1186]
  * Enumerator::Lazy#uniq  [Feature #11090]

* File

  * File.empty?.  [Feature #9969]

* Float

  * Float#ceil, Float#floor, and Float#truncate now take an optional
    digits, as well as Float#round.  [Feature #12245]

  * Float#round now takes an optional keyword argument, half option, and
    the default behavior is round-to-nearest-even now.  [Bug #12548]
    half option can be one of :even, :up, and :down.  [Feature #12953]

* Hash

  * Hash#transform_values and Hash#transform_values!  [Feature #12512]
  * Hash#compact and Hash#compact!  [Feature #11818]

* Integer

  * Integer#ceil, Integer#floor, and Integer#truncate now take an optional
    digits, as well as Integer#round.  [Feature #12245]

  * Fixnum and Bignum are unified into Integer  [Feature #12005]

  * Integer#digits for extracting columns of place-value notation [Feature #12447]

  * Integer#round now takes an optional keyword argument, half option, and the
    default behavior is round-to-nearest-even now.  [Bug #12548]
    half option can be one of :even, :up, and :down.  [Feature #12953]

* IO

  * IO#gets, IO#readline, IO#each_line, IO#readlines, IO.foreach now takes
    an optional keyword argument, chomp flag.  [Feature #12553]

* Kernel
